# nrinaudo.github.com

./: .gitignore  Gemfile  README.markdown  Rakefile  _config.yml  archive.html  articles.md  atom.xml  build.sbt  code.md  feed.xml  index.html  index.md  nrinaudo.cabal  projects.md  robots.txt  site.hs  sitemap.xml  snippets.md  talks.md
_articles/: #optics.md#  capabilities.md  capabilities_flow.md  capability_types.md  capture_checking.md  categorical_equality.md  free_monad.md  function_reuse.md  kantan_tests.md  mcdonalds.md  optics.md  partial_decoding.md  pl.md  programming_as_theory_building.md  recschemes.md  tagless_final.md  things_that_are_things.md  typeclasses.md  what_is_a_category.md
_includes/: articles.html  feed_post_title.html  footer.html  header.html  prev_next.html  talks.html
_layouts/: article.html  default.html  index.html  section.html  series_index.html  talk.html
_optics/: conclusion.md  configpath.md  lenses.md  libraries.md  prisms_optionals.md
_posts/: 2013-05-29-special-scala-methods.md  2013-08-03-partial-functions.md  2013-09-05-pattern-matching-as-parameter.md  2013-09-08-type-variance.md  2015-11-21-tcgu-part-0.md  2015-11-21-tcgu-part-1.md  2015-11-23-tcgu-part-2.md  2015-11-26-tcgu-part-3.md  2015-12-01-tcgu-part-4.md  2015-12-13-tcgu-part-5.md  2018-05-27-minimum-git.md
_recschemes/: ana.md  cata.md  conclusion.md  fix.md  generative_recursion.md  hylo.md  index.md  recursive_data_types.md  tree_height.md  unfold.md
_site/: index.html
_talks/: data_modeling.md  dsl_tagless_final.md  far_more_adt.md  free.md  optics.md  (+7 more)
(+319 files in other folders)
