name:          nrinaudo
version:       0.1.0
description:   A Hakyll Blog
copyright:     (c) 2014 Nicolas Rinaudo
author:        Nicolas Rinaudo
build-type:    Simple
cabal-version: >= 1.8


executable nrinaudo
  ghc-options:     -rtsopts -Wall -O2 -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
  hs-source-dirs:  src/haskell
  main-is:         Main.hs
  build-depends:   base,
                   containers,
                   hakyll          == 4.5.3.0,
                   blaze-html      >= 0.5    && < 0.8,
                   blaze-markup    >= 0.5.1  && < 0.7
